--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,16 +15,16 @@ header{
     color: #ffffff;
 }
 
-header {
+header h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-header .seo {
+header h1 #seo {
     color: #d9dcd6;
 }
 
-header nav {
+header div{
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,13 +32,13 @@ header nav {
     font-size: 20px;
 }
 
-header nav ul {
+header div ul {
     list-style-type: none;
 }
 
-header nav ul li {
+header div ul li {
     display: inline-block;
-    margin-left: 25px;
+    margin-right: 25px;
 }
 
 a {
@@ -116,18 +116,18 @@ p {
     max-height: 200px;
 }
 
-.search-engine-optimization h2, .online-reputation-management h2, .social-media-marketing h2 {
+#search-engine-optimization h2, #online-reputation-management h2, #social-media-marketing h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
 
-.footer {
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
-.footer h2 {
+footer h2 {
     font-size: 20px;
 }
